--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,22 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --background-image-path: url("https://thumbs.dreamstime.com/b/pink-plastered-concrete-wall-texture-painted-built-structure-grungy-uneven-plaster-abstract-background-shabby-155634485.jpg");
+  --primary-purple: #510056;
+  --primary-gold: #e3bc66;
+  --primary-pink: #fcc3d3;
+  --secondary-pink: #ffdbe9;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+button {
+  border-radius: 3px;
+  background-color: #510056;
+  color: #e3bc66;
+  width: 12vmin;
+  height: 4vmin;
+  transition: background-color 1s;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: #e3bc66;
+  color: #510056;
 }
